--- a/src/styles/Feedbacks.css
+++ b/src/styles/Feedbacks.css
@@ -157,3 +157,7 @@
         justify-content: center;
     }
 }
+
+.slick-list {
+    overflow: hidden;
+}
