--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -84,7 +84,7 @@
 /* Media queries for responsiveness */
 @media (max-width: 768px) {
     .home-header {
-        top: 55%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
@@ -96,7 +96,7 @@
     .home-button {
         width: 60%;
         padding: 12px;
-        font-size: 14px;
+        font-size: 15px;
     }
 }
 
