--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -186,7 +186,7 @@
     }
 
     .services-header {
-        font-size: 16px;
+        font-size: 28px;
     }
 
     .services-slider {
